--- a/likita_proj/Procfile
+++ b/likita_proj/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn likita_proj.wsgi --log-file -
+web: python manage.py migrate && python manage.py collectstatic && gunicorn locallibrary.wsgi
